# simd-playground

./: .clang-tidy  .clangd  CMakeLists.txt  CTestCustom.cmake  README.md
scripts/: generate-asm  plot-results.py  run-benchmarks  run-tests
src/benchmarks/: any_of_benchmark.cpp  lower_bound_benchmark.cpp
src/lib/common/include/: common.hpp
src/lib/simdalgorithm/include/: simdalgorithm.hpp
src/lib/simdviews/include/: simdviews.hpp
src/lib/staticbtree/include/: staticbtree.hpp
src/lib/staticbtree/test/: staticbtree_test.cpp
